	=>change specific reference according to name table
	and change in differents tables.
-Fix bug : Now when you delete a formula it works
-Now you can create border directly
-Now you can insert and remove cell (=>move cell at right or bottom etc..)
-Refresh dependence when you insert and remove cell
-Improved Special paste now you can paste only value.
-Now you can hide different tables and it's saving.

1999-10-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix gotoLocation now when you createanchor for going to other
cell, now it works.
-Now you can ajust one cell

 1999-10-30 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Refresh icon text color and icon background color

Summary 1999-10-17 ->1999-10-30

Torben weis has installed posibility to make script in kspread.
You can test it :
	- execute kspread &
	- kscript example15.ks
	
We can write in a specific table, create new table change name ...

thanks .

1999-11-02 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bugfix
-change name in kspread_dlg_formula to correspond with kspread_interpreter
(for example NO =>not etc ...)
Now it works

Summary 1999-11-02 ->1999-11-11

Torben weis has installed a new dialogbox for choose a table format
	=>2 styles of table.
And bug fix	
thanks.


1999-11-11 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bugfix Now changeref works
-Now you can put and remove percent in a cell.
-Now you can put and remove format money in a cell

1999-11-12 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new functions for script
	-bgColor()
	-setBgColor(int,int,int)
	-setBgColor(QString)
	-textColor()
	-setTextColor(int,int,int)
	-setTextColor(QString)  (ex: setTextColor("#39fd59"))
see result in  example15.ks