@@ -975,7 +975,9 @@ void KSpreadTable::insertRightCell( const QPoint &_marker )
 	  list[ k ]->setColumn( list[ k ]->column() + 1 );
 		
 	  key = list[ k ]->row() | ( list[ k ]->column() * 0x10000 );
+	
 	  m_dctCells.insert( key, list[ k ] );
+	  list[ k ]->offsetAlign(list[k]->column(),list[k]->row());
 	}
       }
     }
@@ -1016,6 +1018,7 @@ void KSpreadTable::insertBottomCell(const QPoint &_marker)
 		
 	  key = list[ k ]->row() + ( list[ k ]->column() * 0x10000 );
 	  m_dctCells.insert( key, list[ k ] );
+	  list[ k ]->offsetAlign(list[k]->column(),list[k]->row());
 	}
       }
     }
